BPM configuration adjustments